# Tenantrix

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/agents/: CLAUDE.md
.github/workflows/: ci.yml
Docs/: API.md  ARCHITECTURE.md  CHANGELOG.md
Docs/Backend/: CHANGELOG.md
Docs/Frontend/: FRONTEND-API.md  FRONTEND-ARCHITECTURE.md  FRONTEND-CHANGELOG.md
alembic/: env.py
alembic/versions/: 20260303_1127_10743138f2ab_initial_schema.py  20260309_phase1_add_task_fields.py  20260309_phase2_subtasks_and_links.py  20260309_phase3_sprints.py  20260310_custom_states.py  20260310_phase4_modules.py  20260310_phase5_notifications.py  20260310_phase6_created_by.py  20260312_attachments.py  20260312_saved_views.py  20260405_1319_511703f0eb02_add_avatar_key_and_theme_preference_to_.py  20260405_tenant_subscription_tier.py
app/: main.py
app/api/: deps.py  deps_idempotency.py
app/api/v1/: analytics.py  attachments.py  audit_logs.py  auth.py  comments.py  csv_tasks.py  health.py  modules.py  notifications.py  organizations.py  project_states.py  projects.py  rate_limits.py  router.py  saved_views.py  search.py  sprints.py  tasks.py  watchers.py  websocket.py
app/core/: config.py  limiter.py  redis.py  security.py  tenant_ratelimit.py
app/db/: base.py  session.py
app/db/models/: __init__.py  audit_log.py  comment.py  idempotency_key.py  invite.py  label.py  membership.py  organization.py  project.py  refresh_token.py  task.py  task_label.py  user.py
app/middleware/: error_handler.py  logging.py  request_id.py  security_headers.py  tenant_ratelimit.py
app/models/: __init__.py  attachment.py  audit_log.py  comment.py  idempotency_key.py  invite.py  label.py  membership.py  module.py  notification.py  notification_preference.py  organization.py  project.py  project_state.py  refresh_token.py  saved_view.py  sprint.py  task.py  task_label.py  task_link.py  task_watcher.py  user.py
app/routers/: setup_router.py
app/routers/audit_logs/: router.py
app/routers/auth/: router.py
app/routers/comments/: router.py
app/routers/organizations/: router.py
app/routers/projects/: router.py
app/routers/tasks/: router.py
app/schemas/: attachment.py  audit_log.py  auth.py  comment.py  module.py  notification.py  organization.py  project.py  project_state.py  saved_view.py  sprint.py  task.py
app/services/: audit.py  cache.py  email.py  idempotency.py  notification.py  storage.py  ws_manager.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: app.tsx  index.css  router.tsx
frontend/src/hooks/: use-attachments.ts  use-audit-logs.ts  use-auth.ts  use-comments.ts  use-invites.ts  (+13 more)
tests/: conftest.py  test_audit_logs.py  test_auth.py  test_comments.py  test_hardening.py  test_health.py  test_models.py  test_organizations.py  test_projects.py  test_tasks.py  test_tenant_rate_limiting.py
(+117 files in other folders)
