[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tenantrix"
version = "0.1.0"
description = "Multi-tenant SaaS Project Management System backend"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "DevaVirathan" }]

dependencies = [
    "fastapi>=0.135.1,<0.136",
    "uvicorn[standard]>=0.41.0,<1.0",
    "sqlalchemy>=2.0.48,<2.1",
    "pydantic-settings>=2.13.1,<3.0",
    "alembic>=1.18.0,<2.0",
    "pyjwt>=2.10.0,<3.0",
    "passlib[bcrypt]>=1.7.4,<1.8",
    "bcrypt>=3.2.0,<4.0.0",
    "slowapi>=0.1.9,<1.0",
    "psycopg2-binary>=2.9,<3.0",
    "email-validator>=2.0.0,<3.0",
    "httpx>=0.28.1,<1.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1,<9.0",
    "pytest-cov>=6.0",
    "ruff>=0.15.4,<1.0",
    "black>=26.1.0,<27.0",
    "mypy>=1.13",
    "httpx>=0.28.1,<1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

# --------------------------------------------------------------------------- #
# Ruff                                                                        #
# --------------------------------------------------------------------------- #
[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "C4", "PIE", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

# --------------------------------------------------------------------------- #
# Black                                                                       #
# --------------------------------------------------------------------------- #
[tool.black]
target-version = ["py312"]
line-length = 100

# --------------------------------------------------------------------------- #
# MyPy                                                                        #
# --------------------------------------------------------------------------- #
[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

# --------------------------------------------------------------------------- #
# Pytest                                                                      #
# --------------------------------------------------------------------------- #
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# --------------------------------------------------------------------------- #
# Coverage                                                                    #
# --------------------------------------------------------------------------- #
[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "alembic/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80
